# agent-engineering-toolkit

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
policies/: github-pr-checks.md  model-routing.md  override-protocol.md  provider-and-platform-extensibility.md  review-policy.md  testing-and-design-ownership.md  worker-fallback-and-usage.md
prompts/: orchestrator.md
schemas/: provider-registry.schema.json  task-contract.schema.json
scripts/: init-project.ps1  init-project.sh  validate-project.ps1
src/aet_runtime/: __init__.py  adapters.py  cleanup.py  cli.py  errors.py  github_checks.py  models.py  registry.py  registry_edit.py
templates/: AGENTS.md  CLAUDE.md  task-contract.yaml
templates/.agent-team/: commands.yaml  github.json  manifest.yaml  observability.yaml  overrides.yaml  permissions.yaml  platforms.json  providers.json  routing.yaml  session-cleanup.json
templates/.agent-team/metrics/: README.md  model-usage.csv
tests/: test_adapters.py  test_cleanup.py  test_cli.py  test_github_checks.py  test_registry.py  test_registry_edit.py
